--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,5 +24,5 @@ p {
 }
 
 .navButton {
-  @apply text-white text-lg hover:text-black hover:bg-blue-300 px-4 h-16 flex items-center;
+  @apply text-white text-lg hover:text-black hover:bg-blue-300 hover:border-blue-300 px-6 h-16 flex items-center border-b-4 ;
 }
